# infraorchestrator

./: README.md  deploy.py  pyproject.toml  terraform.tfstate
.github/workflows/: ci.yml
cost/: heuristics.yaml  pricing_catalog.json
examples/prompts/: ha_api_with_pg.md
policies/: aws_security.rego  tags.rego
src/infraorchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/orchestrator/: cli.py  graph.py
src/orchestrator/agents/: cost_agent.py  iac_builder.py  planner.py  policy_agent.py  reporter.py
src/orchestrator/rag/: loader.py  vectorstore.py
src/orchestrator/runners/: cost.py  github.py  opa.py  terraform.py
src/templates/aws/: dynamodb.tf.j2  ecs_service.tf.j2  lambda.tf.j2  lambda_function.py  outputs.tf.j2  provider_aws.tf.j2  provider_localstack.tf.j2  rds_postgres.tf.j2  terraform.tfvars  variables_free_tier.tf.j2  vpc.tf.j2
